Comments out styling on smallest laptop view. Prevents content from jumping around every click.

--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -111,6 +111,10 @@
         padding: 1em;
     }
 
+    .container {
+        max-width: 960px;
+    }
+
     /* Fonts */
     h1 {
         font-size: 2.25rem;
@@ -125,9 +129,9 @@
     }
 
     /* Card Imgs */
-    #playing_field img {
+    /* #playing_field img {
         width: 50%;
-    }
+    } */
 
     /* Btns */
     #start_game_btn {
@@ -145,9 +149,9 @@
         padding-top: 15px;
     }
 
-    #playing_field {
+    /* #playing_field {
         min-height: 220px;
-    }
+    } */
 
     /* Text To Players */
     #text_to_player {
